--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -4,7 +4,7 @@ on:
  workflow_dispatch
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      APIKey: ${{ secrets.TOKEN }}
+ top-Secret:
+  runs-on: ubuntu-latest
+  env:
+   APIKey: ${{ secrets.TOKEN }}
