--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -4,7 +4,11 @@ on:
  workflow_dispatch
 
 jobs:
- top-Secret:
+ github-pages:
   runs-on: ubuntu-latest
+  environment: github-pages
   env:
    APIKey: ${{ secrets.TOKEN }}
+  steps:
+   - name: Read env
+     run: echo "env ${{secrets.TOKEN}}"
