--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -1,4 +1,4 @@
-name: CI
+name: enviroment_test
 
 on:
  workflow_dispatch
@@ -12,3 +12,5 @@ jobs:
   steps:
    - name: Read env
      run: echo "env ${{secrets.TOKEN}}"
+   - name: creating import
+     run: cd js && echo -e "const TOKEN = 'api-token';\n\nexport default TOKEN;" > config.js
