--- a/.github/workflows/SECRETS.yml
+++ b/.github/workflows/SECRETS.yml
@@ -13,4 +13,4 @@ jobs:
    - name: Read env
      run: echo "env ${{secrets.TOKEN}}"
    - name: creating import
-     run: cd js && echo -e "const TOKEN = 'api-token';\n\nexport default TOKEN;" > config.js
+     run: echo -e "const TOKEN = 'api-token';\n\nexport default TOKEN;" > config.js
