--- a/.github/workflows/SECRETS.yml
+++ b/.github/workflows/SECRETS.yml
@@ -12,5 +12,10 @@ jobs:
   steps:
    - name: Read env
      run: echo "env ${{secrets.TOKEN}}"
-   - name: creating import
-     run: echo -e "const TOKEN = ${{secrets.TOKEN}};\n\nexport default TOKEN;" > config.js
+   - name: Overwrite file
+     uses: "DamianReeves/write-file-action@master"
+     with:
+      path: ./config.js
+      write-mode: overwrite
+      contents: |
+       const TOKEN = ${{secrets.TOKEN}};\n\nexport default TOKEN;
