--- a/.github/workflows/SECRETS.yml
+++ b/.github/workflows/SECRETS.yml
@@ -18,4 +18,4 @@ jobs:
       path: ./config.js
       write-mode: overwrite
       contents: |
-       const TOKEN = ${{secrets.TOKEN}};\n\nexport default TOKEN;
+       const TOKEN = "https://script.google.com/macros/s/AKfycbzfwkUv1rmt7jaIBEjZu5D_EJS9Nj775SRld_aOk_uYQJdDyYIs76eDXKqTx2Dlv1QyfA/exec"; export default TOKEN;
